--- a/packages/documentation/static/styles/global.css
+++ b/packages/documentation/static/styles/global.css
@@ -7,7 +7,8 @@
 
 body {
   width: 100vw;
-  height: 100vh;
+  max-width: 100%;
+  height: fit-content;
 }
 
 /* placeholder-logo for usage in all files */
