--- a/packages/angular-test-app/src/styles.scss
+++ b/packages/angular-test-app/src/styles.scss
@@ -7,4 +7,4 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-@import './styles/global.css';
+ @import '../../documentation/static/styles/global.css'
