--- a/packages/core/src/components/menu-about-news/menu-about-news.scss
+++ b/packages/core/src/components/menu-about-news/menu-about-news.scss
@@ -8,6 +8,7 @@
  */
 
 @import 'common-variables';
+@import 'mixins/break-points';
 @import 'mixins/shadows';
 @import 'mixins/shadow-dom/component';
 $left: 3.4rem;
@@ -29,7 +30,7 @@ $left: 3.4rem;
   z-index: 10000;
   transition: left var(--animate-duration);
 
-  margin-left: var(--margin) !important;
+  margin-inline-start: var(--margin) !important;
 
   @include box-shadow(4);
 
@@ -57,8 +58,8 @@ $left: 3.4rem;
 
   .cui-popover-news-header {
     margin-bottom: 2.5rem;
-    margin-left: 4rem;
-    margin-top: -$tiny-space;
+    margin-inline-start: 4rem;
+    margin-block-start: -$tiny-space;
   }
 
   .popover-body {
@@ -94,4 +95,27 @@ $left: 3.4rem;
 
 :host(.show) {
   display: none;
+}
+
+@include media-breakpoint-match('sm') {
+  :host {
+    display: flex;
+    flex-direction: column;
+    max-height: calc(100vh - 4.75rem);
+    width: calc(100% - 2rem);
+    max-width: 30rem;
+    transform: translateX(calc(1rem - 50%));
+    left: calc(50% - 1rem) !important;
+    bottom: 1rem !important;
+    margin-inline: 0 !important;
+    z-index: calc(var(--theme-z-index-sticky) - 1);
+
+    .slot-container {
+      overflow-y: auto;
+    }
+
+    #arrow {
+      display: none;
+    }
+  }
 }
