--- a/packages/core/src/components/side-panel/side-panel.scss
+++ b/packages/core/src/components/side-panel/side-panel.scss
@@ -13,6 +13,23 @@ $side-pane-mini-content-width: 76px;
   position: relative;
   background-color: var(--theme-nav--background);
 
+  .border-top {
+    border-top: 1px solid var(---color-soft-bdr);
+  }
+
+  .border-bottom {
+    border-top: 1px solid var(---color-soft-bdr);
+  }
+
+  .border-left {
+    border-top: 1px solid var(---color-soft-bdr);
+  }
+
+  .border-right {
+    border-top: 1px solid var(---color-soft-bdr);
+  }
+
+
   .side-panel-horizontal {
     background-color: var(--theme-nav--background);
     width: 100%;
@@ -25,6 +42,10 @@ $side-pane-mini-content-width: 76px;
         justify-content: space-between;
         padding: 0 1.2rem;
       }
+    }
+
+    &.box-shadow {
+      box-shadow: 0 0 10px;
     }
 
   }
@@ -97,5 +118,10 @@ $side-pane-mini-content-width: 76px;
 
     }
   }
+}
 
+:host(.mobile-overlay) {
+  position: absolute;
+  height: 100%;
+  z-index: 15;
 }
