--- a/packages/core/src/components/side-pane-group/side-pane-group.scss
+++ b/packages/core/src/components/side-pane-group/side-pane-group.scss
@@ -1,3 +1,11 @@
+/*
+ * SPDX-FileCopyrightText: 2023 Siemens AG
+ *
+ * SPDX-License-Identifier: MIT
+ *
+ * This source code is licensed under the MIT license found in the
+ * LICENSE file in the root directory of this source tree.
+ */
 @import 'common-variables';
 @import 'mixins/hover';
 @import 'mixins/shadow-dom/component';
@@ -39,10 +47,10 @@
   }
 
   .content {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-grow: 1;
+    height: 100%;
+    width: 100%;
   }
 
   .absolute {
