--- a/packages/core/src/components/side-pane-group/side-pane-group.scss
+++ b/packages/core/src/components/side-pane-group/side-pane-group.scss
@@ -28,6 +28,7 @@
   .row {
     height: 100%;
     width: 100%;
+    overflow: hidden;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
