fix(core/side-panel): fixes

--- a/packages/core/src/components/side-pane-group/side-pane-group.scss
+++ b/packages/core/src/components/side-pane-group/side-pane-group.scss
@@ -15,6 +15,8 @@
   @include ix-component;
   display: flex;
   position: absolute;
+  width: 100%;
+  height: 100%;
 
   .side-panes-wrapper {
     height: 100%;
