--- a/packages/core/src/components/avatar/avatar.scss
+++ b/packages/core/src/components/avatar/avatar.scss
@@ -51,6 +51,48 @@
   }
 }
 
+:host {
+  .user-info {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    height: 2.5rem;
+    padding: 1rem;
+    width: 12.75rem;
+    min-width: 12.75rem;
+    max-width: 12.75rem;
+
+    gap: 1rem;
+
+    .avatar {
+      width: 2rem;
+      pointer-events: none;
+    }
+
+    .user {
+      display: flex;
+      position: relative;
+      flex-direction: column;
+      justify-content: center;
+      max-width: 10rem;
+      width: 100%;
+      overflow: hidden;
+    }
+
+    .username {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .extra {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+}
+
 :host(.avatar-button) {
   button {
     @include btn-base;
