--- a/packages/core/src/components/divider/divider.scss
+++ b/packages/core/src/components/divider/divider.scss
@@ -12,6 +12,6 @@
   position: relative;
 
   width: 100%;
-  border: 0.0625rem solid var(--theme-color-x-weak-bdr);
+  border-bottom: 0.0625rem solid var(--theme-color-x-weak-bdr);
   margin: 0.25rem 0px;
 }
