--- a/packages/core/src/components/side-pane/side-pane.scss
+++ b/packages/core/src/components/side-pane/side-pane.scss
@@ -21,9 +21,36 @@ $side-pane-mini-content-width: 76px;
   flex-direction: column;
   position: relative;
 
+  .title-text {
+    font-family: "Siemens Sans", serif;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+  }
+
+  .title-text-icon {
+    margin: 3px;
+  }
+
+  .title-icon {
+    margin: 4px;
+  }
 
   .top-bottom-pane {
     flex-grow: 1;
+
+    .title-inline-collapsed {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      height: 100%;
+    }
+
+    .title-inline-expanded {
+      display: flex;
+      flex-direction: row;
+    }
   }
 
   .mobile-expanded {
@@ -39,6 +66,10 @@ $side-pane-mini-content-width: 76px;
       display: flex;
       flex-direction: column;
       align-items: center;
+
+      .title-text {
+        flex-direction: row-reverse;
+      }
     }
 
     .title-inline-expanded {
@@ -129,4 +160,14 @@ $side-pane-mini-content-width: 76px;
 :host(.preview-content) {
   width: 76px;
   overflow: hidden;
+}
+
+:host(.top-bottom-pane) {
+  width: 100%;
+  height: 40px;
+}
+
+:host(.left-right-pane) {
+  width: 40px;
+  height: 100%;
 }
