feat(core/avatar): add user-info to dropdown (#1043)
Co-authored-by: Lukas Maurer <lukas.maurer@siemens.com>

--- a/packages/core/src/components/avatar/avatar.scss
+++ b/packages/core/src/components/avatar/avatar.scss
@@ -39,6 +39,7 @@
       min-width: 2rem;
       border-radius: 100px;
       background-color: var(--theme-color-component-3);
+      color: var(--theme-color-std-text);
     }
 
     #avatar-path-background {
@@ -47,6 +48,48 @@
 
     #avatar-path-person {
       fill: var(--theme-color-4);
+    }
+  }
+}
+
+:host {
+  .user-info {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    height: 2.5rem;
+    padding: 1rem;
+    width: 12.75rem;
+    min-width: 12.75rem;
+    max-width: 12.75rem;
+
+    gap: 1rem;
+
+    .avatar {
+      width: 2rem;
+      pointer-events: none;
+    }
+
+    .user {
+      display: flex;
+      position: relative;
+      flex-direction: column;
+      justify-content: center;
+      max-width: 10rem;
+      width: 100%;
+      overflow: hidden;
+    }
+
+    .username {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .extra {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
