--- a/packages/core/src/components/side-pane/side-pane.scss
+++ b/packages/core/src/components/side-pane/side-pane.scss
@@ -46,9 +46,6 @@ $side-pane-mini-content-width: 76px;
       align-items: center;
     }
 
-    .title-inline-expanded {
-      height: 52px;
-    }
   }
 
   .mobile-expanded {
@@ -77,7 +74,6 @@ $side-pane-mini-content-width: 76px;
     .title-inline-expanded {
       display: flex;
       flex-direction: row;
-      align-items: unset;
 
       &.header-gap {
         margin: var(--theme-space--1)  var(--theme-space-3) var(--theme-space--1) var(--theme-space-3);
@@ -94,6 +90,10 @@ $side-pane-mini-content-width: 76px;
     writing-mode: vertical-lr;
     text-orientation: mixed;
     transform: rotate(180deg);
+  }
+
+  .rotate-icon {
+    transform: rotate(-90deg);
   }
 
   .title-mobile {
@@ -172,12 +172,3 @@ $side-pane-mini-content-width: 76px;
   overflow: hidden;
 }
 
-:host(.top-bottom-pane) {
-  width: 100%;
-  height: 40px;
-}
-
-:host(.left-right-pane) {
-  width: 40px;
-  height: 100%;
-}
