--- a/packages/core/src/components/side-pane-group/side-pane-group.scss
+++ b/packages/core/src/components/side-pane-group/side-pane-group.scss
@@ -25,6 +25,8 @@
 
   .side-pane-wrapper-vertical {
     display: flex;
+    flex-shrink: 0;
+    flex-grow: 0;
   }
 
   .row {
@@ -53,7 +55,7 @@
     display: flex;
     flex-grow: 1;
     height: 100%;
-    width: 100%;
+    overflow: scroll;
   }
 
   .absolute {
