--- a/packages/core/src/components/key-value/key-value.scss
+++ b/packages/core/src/components/key-value/key-value.scss
@@ -1,4 +1,5 @@
 @import 'common-variables';
+@import 'mixins/text-truncation';
 
 :host(.keyValue) {
   display: flex;
@@ -14,6 +15,13 @@
     display: flex;
     flex-grow: 1;
     align-items: flex-start;
+
+    &,
+    .content__label,
+    .content__value {
+      @include ellipsis;
+      max-width: 100%;
+    }
 
     .content__label {
       color: var(--theme-color-soft-text);
