--- a/packages/core/src/components/pane/pane.scss
+++ b/packages/core/src/components/pane/pane.scss
@@ -18,8 +18,13 @@ $side-pane-mini-content-width: 76px;
   @include ix-component;
   background-color: var(--theme-nav--background);
   display: flex;
-  flex-direction: column;
   position: relative;
+  overflow: hidden;
+
+  aside {
+    width: 100%;
+    
+  }
 
   .title-text {
     font-family: "Siemens Sans", serif;
@@ -27,6 +32,19 @@ $side-pane-mini-content-width: 76px;
     display: flex;
     align-items: center;
     font-size: 16px;
+    gap: 8px;
+    width: calc(100% - 40px);
+
+    .title-text-overflow {
+      position: relative;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .title-text-expanded {
+      order: 1
+    }
   }
 
   .header-gap {
@@ -68,6 +86,7 @@ $side-pane-mini-content-width: 76px;
 
       .title-text {
         flex-direction: row-reverse;
+        justify-content: start;
       }
     }
 
@@ -93,7 +112,7 @@ $side-pane-mini-content-width: 76px;
   }
 
   .rotate-icon {
-    transform: rotate(-90deg);
+    transform: rotate(-45deg);
   }
 
   .title-mobile {
@@ -131,26 +150,33 @@ $side-pane-mini-content-width: 76px;
       border-#{$position}: 1px solid var(--theme-color-soft-bdr);
     }
   }
+}
 
-  .nav-left-border {
-    @include set-border(left);
+@mixin set-border($position) {
+  @if $position {
+    border-#{$position}: 1px solid var(--theme-color-soft-bdr);
   }
+}
 
-  .right-pane-border {
-    @include set-border(left);
-  }
+:host(.left-pane-border) {
+  @include set-border(right);
+}
 
-  .left-pane-border {
-    @include set-border(right);
-  }
+:host(.nav-left-border) {
+  @include set-border(left);
+}
 
-  .top-pane-border {
-    @include set-border(bottom);
-  }
+:host(.right-pane-border) {
+  @include set-border(left);
+}
 
-  .bottom-pane-border {
-    @include set-border(top);
-  }
+
+:host(.top-pane-border) {
+  @include set-border(bottom);
+}
+
+:host(.bottom-pane-border) {
+  @include set-border(top);
 }
 
 :host(.mobile-overlay) {
@@ -170,5 +196,15 @@ $side-pane-mini-content-width: 76px;
 :host(.preview-content) {
   width: 76px;
   overflow: hidden;
+}
+
+:host(.left-right-pane) {
+  height: 100%;
+  width: 40px;
+}
+
+:host(.top-bottom-pane) {
+  width: 100%;
+  height: 40px;
 }
 
