fix: implement review, fix pipeline and tests

--- a/packages/core/src/components/pane-layout/pane-layout.scss
+++ b/packages/core/src/components/pane-layout/pane-layout.scss
@@ -13,7 +13,7 @@
 
 @mixin set-padding($position) {
   @if $position {
-    padding-#{$position}: 40px;
+    padding-#{$position}: 2.5rem;
   }
 }
 
