--- a/packages/core/src/components/pane-layout/pane-layout.scss
+++ b/packages/core/src/components/pane-layout/pane-layout.scss
@@ -17,6 +17,13 @@
   }
 }
 
+@mixin set-absolute($position) {
+  @if $position {
+    position: absolute;
+    #{$position}: 0;
+  }
+}
+
 :host {
   @include ix-component;
   display: flex;
@@ -36,6 +43,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: relative;
   }
 
   .col {
@@ -45,18 +53,33 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
   }
 
   .content {
-    height: 100%;
     width: 100%;
+    height: 100%;
     overflow: auto;
   }
 
-  .absolute {
-    height: 100%;
+  .absolute-top {
     width: 100%;
-    position: absolute;
+    @include set-absolute(top);
+  }
+
+  .absolute-bottom {
+    width: 100%;
+    @include set-absolute(bottom);
+  }
+
+  .absolute-left {
+    height: 100%;
+    @include set-absolute(left);
+  }
+
+  .absolute-right {
+    height: 100%;
+    @include set-absolute(right);
   }
 
   .padding-top {
