--- a/packages/core/src/components/pane/pane.scss
+++ b/packages/core/src/components/pane/pane.scss
@@ -13,14 +13,13 @@
 
 @mixin set-border($position) {
   @if $position {
-    border-#{$position}-color: var(--theme-color-soft-bdr) !important;
+    border-#{$position}: var(--theme-app-header--border-width) solid var(--theme-color-soft-bdr);
   }
 }
 
 :host {
   @include ix-component;
   background-color: var(--theme-color-2);
-  border: var(--theme-app-header--border-width) solid var(--theme-color-2);
   display: flex;
   position: relative;
   overflow: hidden;
@@ -28,6 +27,7 @@
 
   aside {
     width: 100%;
+    height: 100%;
   }
 
   .title-text {
@@ -85,7 +85,6 @@
 
   .left-right-pane {
     display: flex;
-    flex-direction: column;
     flex-grow: 1;
 
     .title {
@@ -117,6 +116,10 @@
       padding: 0 !important;
       margin: var(--theme-space-2) var(--theme-space-2) var(--theme-space-2) var(--theme-space-2);
     }
+  }
+
+  .left-right-pane.expanded {
+    flex-direction: column;
   }
 
   .rotate {
@@ -153,7 +156,6 @@
 
 :host(.inline-color) {
   background-color: var(--theme-color-1);
-  border-color: var(--theme-color-1);
 }
 
 :host(.box-shadow) {
@@ -161,7 +163,7 @@
 }
 
 :host(.nav-left-border) {
-  border-left-color: var(--theme-color-weak-bdr) !important;
+  border-left: var(--theme-app-header--border-width) solid var(--theme-color-weak-bdr);
 }
 
 :host(.left-pane-border) {
